comentando as simulacoes

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -172,35 +172,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def simular_jogo(jogo, jogador):\n",
     "    tamanho_palavra = jogo.novo_jogo()\n",
     "    jogador.nova_partida(tamanho_palavra)\n",
-    "    print(\"Nova palavra com\", tamanho_palavra, \"letras\")\n",
+    "    #print(\"Nova palavra com\", tamanho_palavra, \"letras\")\n",
     "\n",
     "    while jogo.vidas > 0:\n",
     "        palavra_tentativa = jogador.tentar_palavra()\n",
     "        if palavra_tentativa:\n",
-    "            print(\"Tentando palavra:\", palavra_tentativa)\n",
+    "            #print(\"Tentando palavra:\", palavra_tentativa)\n",
     "            if jogo.tentar_palavra(palavra_tentativa):\n",
-    "                print(\"Ganhou!\")\n",
+    "                #print(\"Ganhou!\")\n",
     "                return True\n",
     "            else:\n",
-    "                print(\"Perdeu!\")\n",
+    "                #print(\"Perdeu!\")\n",
     "                return False\n",
     "\n",
     "        letra = jogador.escolher_letra()\n",
     "        if not letra:\n",
     "            break\n",
-    "        print(\"Tentando letra:\", letra)\n",
+    "        #print(\"Tentando letra:\", letra)\n",
     "        indices = jogo.tentar_letra(letra)\n",
     "        jogador.atualizar_palavras_possiveis(letra, indices)\n",
-    "        print(\"Vidas restantes:\", jogo.vidas)\n",
+    "        #print(\"Vidas restantes:\", jogo.vidas)\n",
     "    \n",
-    "    print(\"Fim de jogo. A palavra era:\", jogo.palavra)\n",
+    "    #print(\"Fim de jogo. A palavra era:\", jogo.palavra)\n",
     "    return False\n"
    ]
   },
