--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Projeto Forca\n",
     "\n",
-    "## Importações\n"
+    "## Importações\n",
+    "As importações fornecem ferramentas para gerar palavras aleatórias, manipular dados, calcular entropia e probabilidades, e visualizar resultados do jogo da forca."
    ]
   },
   {
@@ -167,7 +168,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simular o jogo com o jogador automático"
+    "## Simular o jogo com o jogador automático\n",
+    "A função simula uma partida de forca, onde o jogador tenta adivinhar a palavra até perder todas as vidas ou acertar a palavra. Retorna True se vencer e False se perder."
    ]
   },
   {
@@ -209,7 +211,7 @@
    "metadata": {},
    "source": [
     "## Executando a simulação\n",
-    "Utilizando do simulador para calcular a quantidade de acertos e erros"
+    "O código realiza 100 simulações do jogo da forca, contabiliza as vitórias, calcula a taxa de sucesso do jogador automático e determina as taxas de erro e acerto."
    ]
   },
   {
